--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -603,4 +603,4 @@ views:
       - type: custom:button-card
         view_layout:
           grid-area: footer
-        template: apcupsd
+        template: footer
