--- a/automations/anas_desk.yaml
+++ b/automations/anas_desk.yaml
@@ -38,7 +38,7 @@
               id: 'light_on'
           sequence:
             - service: light.turn_on
-              entity_id: light.ana_desk_lights
+              entity_id: light.ana_desk_light
 
         # IF pressing "off"
         - conditions:
@@ -46,7 +46,7 @@
               id: 'light_off'
           sequence:
             - service: light.turn_off
-              entity_id: light.ana_desk_lights
+              entity_id: light.ana_desk_light
 
         # IF pressing "up"
         - conditions:
@@ -55,7 +55,7 @@
           sequence:
             - service: light.turn_on
               data:
-                entity_id: light.ana_desk_lights
+                entity_id: light.ana_desk_light
                 brightness_step: 50
 
         # IF pressing "down"
@@ -65,5 +65,5 @@
           sequence:
             - service: light.turn_on
               data:
-                entity_id: light.ana_desk_lights
+                entity_id: light.ana_desk_light
                 brightness_step: -50
