--- a/popup/sidebar_information.yaml
+++ b/popup/sidebar_information.yaml
@@ -17,26 +17,32 @@ browser_mod:
             }
             ha-card {
               animation: border 1s forwards;
+              border-right: 1.5px solid rgba(0, 0, 0, 0.2);
               border-radius: 0;
             }
             @keyframes border {
               0%, 100% {
                 border-right: 1px solid rgba(0, 0, 0, 0.3);
               }
+              transition: none;
             }
+
             /* phone */
             @media screen and (max-width: 800px) {
               ha-card {
+                border-right: none;
+                border-bottom: 1.5px solid rgba(0, 0, 0, 0.2);
+                padding-right: 0;
                 animation: none;
               }
             }
-
-          $hui-horizontal-stack-card$: |
-            #root {
-              justify-content: space-evenly;
-              margin-top: 1.9em;
-              margin-left: 0.8em;
-            }
+          $hui-horizontal-stack-card:
+            $: |
+              #root {
+                justify-content: space-evenly;
+                margin-top: 1.9em;
+                max-width: 82vw; /* iphonex */
+              }
   card:
     type: custom:layout-card
     layout_type: custom:grid-layout
