--- a/btn_card_templates/button_card_templates.yaml
+++ b/btn_card_templates/button_card_templates.yaml
@@ -2,24 +2,69 @@
 
   #################################################
   #                                               #
+  #                   SETTINGS                    #
+  #                                               #
+  #################################################
+
+  settings:
+    variables:
+      entity_tablet: switch.galaxy_tab_a_screensaver
+      entity_browser_mod: media_player.browser_9c06ce87_d1cf313c
+      translate_unknown: Unknown
+      translate_idle: Inactive
+      translate_home: Home
+      translate_not_home: Away
+
+  #################################################
+  #                                               #
   #                     BASE                      #
   #                                               #
   #################################################
 
   base:
+    template:
+      - settings
     variables:
+      state_on: >
+        [[[ return ['on', 'home', 'cool', 'fan_only', 'playing'].indexOf(entity === undefined || entity.state) !== -1; ]]]
       state: >
         [[[ return entity === undefined || entity.state; ]]]
+      entity_id: >
+        [[[ return entity === undefined || entity.entity_id; ]]]
+      media_on: >
+        [[[ return entity === undefined || ['playing', 'paused'].indexOf(entity.state) !== -1; ]]]
+      media_off: >
+        [[[ return entity === undefined || ['off', 'idle', 'standby', 'unknown', 'unavailable'].indexOf(entity.state) !== -1; ]]]
+      entity_picture: >
+        [[[ return entity === undefined || entity.attributes.entity_picture; ]]]
       timeout: >
         [[[ return entity === undefined || Date.now() - Date.parse(entity.last_changed); ]]]
-      consider_on: >
-        [[[ return ['on', 'home', 'cool', 'fan_only', 'playing'].indexOf(entity === undefined || entity.state) !== -1; ]]]
     aspect_ratio: 1/1
     show_state: true
     show_icon: false
     state_display: >
-      [[[ if (variables.state === true) return 'Unknown'; ]]]
+      [[[ if (variables.state === true) return variables.translate_unknown; ]]]
     tap_action:
+      ui_sound_tablet: |
+        [[[
+          let screensaver = states[variables.entity_tablet] === undefined || 
+            states[variables.entity_tablet].state;
+
+          if (variables.state === 'off' && screensaver === 'off') {
+            hass.callService('media_player', 'play_media', {
+              entity_id: variables.entity_browser_mod,
+              media_content_id: '/local/sound/on.m4a',
+              media_content_type: 'music'
+            });
+          }
+          if (variables.state_on && screensaver === 'off') {
+            hass.callService('media_player', 'play_media', {
+              entity_id: variables.entity_browser_mod,
+              media_content_id: '/local/sound/off.m4a',
+              media_content_type: 'music'
+            });
+          }
+        ]]]
       animation_card: |
         [[[
           let time = 900;
@@ -31,6 +76,8 @@
         ]]]
       action: toggle
       haptic: medium
+    hold_action:
+      haptic: success
     styles:
       grid:
         - grid-template-areas: |
@@ -39,11 +86,11 @@
             "s     s"
         - grid-template-columns: repeat(2, 1fr)
         - grid-template-rows: auto repeat(2, min-content)
-        - gap: 2%
+        - gap: 1.3%
         - align-items: start
       name:
         - justify-self: start
-        - line-height: 115%
+        - line-height: 121%
       state:
         - justify-self: start
         - line-height: 115%
@@ -52,33 +99,46 @@
         - border-radius: var(--custom-button-card-border-radius)
         - -webkit-tap-highlight-color: rgba(0,0,0,0)
         - transition: none
-        - padding: 10%
+        - padding: 10% 9% 9% 10%
         - --mdc-ripple-color: >
             [[[
-              return variables.consider_on ?
-                'rgb(0, 0, 0)' :
-                'rgba(255, 255, 255, 0.3)';
+              return variables.state_on
+                ? 'rgb(0, 0, 0)'
+                : 'rgba(255, 255, 255, 0.3)';
             ]]]
         - color: >
             [[[
-              return variables.consider_on ?
-                'rgba(0, 0, 0, 0.6)' :
-                'rgba(255, 255, 255, 0.3)';
+              return variables.state_on
+                ? 'rgba(0, 0, 0, 0.6)'
+                : 'rgba(255, 255, 255, 0.3)';
             ]]]
         - background-color: >
             [[[
-              return variables.consider_on ?
-                'rgba(255, 255, 255, 0.8)' :
-                'rgba(115, 115, 115, 0.2)';
+              return variables.state_on
+                ? 'rgba(255, 255, 255, 0.8)'
+                : 'rgba(115, 115, 115, 0.2)';
             ]]]
     extra_styles: |
       [[[
+        if (entity) {
+          let hs = entity.attributes.hs_color === undefined,
+            h = hs || entity.attributes.hs_color[0],
+            s = hs || entity.attributes.hs_color[1],
+            l_min = 28,
+            l_max = 48,
+            l_calc = entity.attributes.brightness / 2.54 * (l_max - l_min) / 100 + l_min;
+          var light_color = entity.attributes.color_mode === 'color_temp'
+            ? `hsl(204, 58%, ${l_calc}%);`
+            : `hsl(${h}, ${s}%, ${l_calc}%);`;
+        }
         return `
           svg {
             --light-color:
-            ${ variables.state === 'on'
-              ? 'var(--state-icon-active-color);'
-              : 'var(--state-icon-color);'
+            ${ variables.state_on && entity.attributes.brightness !== undefined
+                ? light_color
+                : variables.state_on && entity.attributes.brightness === undefined
+                  ? 'var(--state-icon-active-color);'
+                  : 'var(--state-icon-color);'
             }
           }
           #container {
@@ -91,11 +151,19 @@
           #state::first-letter {
             text-transform: uppercase;
           }
+          #blur, #overlayx {
+            top: calc((100% - var(--media-blur-height)) + 0.5%);
+            height: var(--media-blur-height);
+          }
           /* portrait */
           @media screen and (max-width: 1200px) {
             #name, #state {
               font-size: 2vw;
               letter-spacing: 0.05vw;
+            }
+            #blur, #overlayx {
+              top: calc((100% - (var(--media-blur-height) + 1.5%)) + 0.5%);
+              height: calc(var(--media-blur-height) + 1.5%);
             }
           }
           /* phone */
@@ -103,6 +171,10 @@
             #name, #state {
               font-size: 3.1vw;
               letter-spacing: 0.12vw;
+            }
+            #blur, #overlayx {
+              top: calc((100% - (var(--media-blur-height) + 3%)) + 0.5%);
+              height: calc(var(--media-blur-height) + 3%);
             }
           }
           @keyframes card_bounce {
@@ -123,7 +195,7 @@
             }
           }
           .marquee {
-            animation: marquee 15s linear infinite;
+            animation: marquee 20s linear infinite;
           }
           @keyframes marquee {
             from {
@@ -491,8 +563,19 @@
       - base
       - circle
     state_display: >
-      [[[ return variables.state === 'home' ? 'Yes' : 'No'; ]]]
+      [[[
+        if (entity) {
+          return variables.state === 'home'
+            ? variables.translate_home
+            : variables.state === 'not_home'
+              ? variables.translate_not_home
+              : variables.state;
+        }
+        return variables.translate_unknown;
+      ]]]
     triggers_update: sensor.time
+    hold_action:
+      action: none
     styles:
       custom_fields:
         icon:
@@ -502,19 +585,27 @@
           - display: grid
     custom_fields:
       icon: >
-        [[[ return entity === undefined ? null : `<img src="${states[entity.entity_id].attributes.entity_picture}" width="100%">`; ]]]
+        [[[
+          return entity && variables.entity_picture
+            ? `<img src="${variables.entity_picture}" width="100%">`
+            : null;
+        ]]]
       circle: >
         [[[
           if (entity) {
             let time = c => {
               let s = (c/1e3), m = (c/6e4), h = (c/36e5), d = (c/864e5);
               return s < 60 ? parseInt(s) + 's' : m < 60 ? parseInt(m) + 'm' : h < 24 ? parseInt(h) + 'h' : parseInt(d) + 'd';
-            };
-            let last_changed = states[variables.retain] == null || states[variables.retain].state == 'unavailable'
-                ? time(Date.now() - Date.parse(states[entity.entity_id].last_changed))
-                : time(Date.now() - Date.parse(states[variables.retain].state)),
-              stroke = variables.state === 'home' ? '#b2b2b2' : 'none',
-              fill = variables.state === 'not_home' ? 'rgba(255,255,255,0.04)' : 'none';
+            },
+            last_changed = states[variables.retain] == null || states[variables.retain].state == 'unavailable'
+              ? time(Date.now() - Date.parse(entity.last_changed))
+              : time(Date.now() - Date.parse(states[variables.retain].state)),
+            stroke = variables.state === 'home'
+              ? '#b2b2b2'
+              : 'none',
+            fill = variables.state !== 'home'
+              ? 'rgba(255,255,255,0.04)'
+              : 'none';
             return `
               <svg viewBox="0 0 50 50">
                 <circle cx="25" cy="25" r="20.5" stroke="${stroke}" stroke-width="1.5" fill="${fill}" />
@@ -534,34 +625,33 @@
     tap_action:
       action: >
         [[[
-          return !(variables.state === 'off' || variables.state === 'idle' || variables.state === 'standby') ? 'call-service' : 'none';
+          return variables.media_on
+            ? 'call-service'
+            : 'none';
         ]]]
       service: media_player.media_play_pause
       service_data:
         entity_id: >
-          [[[ return entity === undefined || entity.entity_id; ]]]
+          [[[
+            return variables.entity_id;
+          ]]]
     double_tap_action:
-      action: call-service
-      service: >
-        [[[ return variables.state === 'off' || variables.state === 'idle' || variables.state === 'standby' ? 'media_player.turn_on' : 'media_player.turn_off'; ]]]
-      service_data:
-        entity_id: >
-          [[[ return entity === undefined || entity.entity_id; ]]]
+      action: more-info
     styles:
       card:
         - color: >
             [[[
-              let entity_picture = entity === undefined || entity.attributes.entity_picture;
-              if (variables.state === 'off' || variables.state === 'idle' || variables.state === 'standby' ||
-                variables.state === 'unknown' || variables.state === 'unavailable' || entity === undefined) {
-                return 'rgba(255, 255, 255, 0.3)';
-              }
-              return (variables.state != 'off' && variables.state != 'idle' && variables.state != 'standby') && (entity_picture == null) ? 'rgba(0, 0, 0, 0.6)' : '#efefef';
+              return variables.media_on && variables.entity_picture === undefined
+                ? 'rgba(0, 0, 0, 0.6)'
+                : variables.media_off
+                  ? 'rgba(255, 255, 255, 0.3)'
+                  : '#efefef';
             ]]]
         - text-shadow: >
             [[[
-              const entity_picture = entity === undefined ? null : entity.attributes.entity_picture;
-              return entity_picture == null ? 'none' : '1px 1px 5px rgba(18, 22, 23, 0.9)';
+              return variables.media_off || variables.entity_picture === undefined
+                ? 'none'
+                : '1px 1px 5px rgba(18, 22, 23, 0.9)';
             ]]]
 
   #################################################
@@ -581,22 +671,20 @@
           - fill: '#9da0a2'
           - opacity: >
               [[[
-                let entity_picture = entity === undefined ? null : entity.attributes.entity_picture;
-                return entity_picture == null ? 1 : 0;
+                return variables.media_off || variables.entity_picture === undefined
+                  ? '1'
+                  : '0';
               ]]]
       card:
         - background-color: none
         - background-size: cover
         - background-image: >
             [[[
-              let entity_picture = entity === undefined || entity.attributes.entity_picture;
-              if (variables.state === 'off' || variables.state === 'idle' || variables.state === 'standby' ||
-                variables.state === 'unknown' || variables.state === 'unavailable' || entity === undefined) {
-                return 'linear-gradient(0deg, rgba(115, 115, 115, 0.2) 0%, rgba(115, 115, 115, 0.2) 100%)';
-              }
-              return (variables.state != 'off' && variables.state != 'idle' && variables.state != 'standby') && (entity_picture == null) ? 
-                'linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 100%)' : 
-                'linear-gradient(0deg, rgba(0,0,0,.8) 0%, rgba(0,0,0,0) 100%), url(' + entity_picture + ')';
+              return variables.media_on && variables.entity_picture === undefined
+                ? 'linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 100%)'
+                : variables.media_off
+                  ? 'linear-gradient(0deg, rgba(115, 115, 115, 0.2) 0%, rgba(115, 115, 115, 0.2) 100%)'
+                  : `linear-gradient(0deg, rgba(0,0,0,.8) 0%, rgba(0,0,0,0) 100%), url(${variables.entity_picture})`;
             ]]]
 
   #################################################
