--- a/popup/family_room_tv.yaml
+++ b/popup/family_room_tv.yaml
@@ -26,20 +26,20 @@ browser_mod:
           class: content
         entities:
 
-          - entity: media_player.samsung_1080p
+          - entity: media_player.living_room_tv
             name: Samsung 1080p
             secondary_info: last-changed
 
       - type: history-graph
         entities:
-          - entity: media_player.samsung_1080p
+          - entity: media_player.living_room_tv
             name: Samsung 1080p
 
       - type: horizontal-stack
         cards:
 
           - type: custom:button-card
-            entity: media_player.samsung_1080p
+            entity: media_player.living_room_tv
             icon: mdi:volume-mute
             tap_action:
               action: call-service
