--- a/automations/oli_bedroom.yaml
+++ b/automations/oli_bedroom.yaml
@@ -7,8 +7,13 @@
       stored_traces: 10
   trigger:
     - platform: time
+      id: oli_bedroom_morning
       at:
         - "06:00:00"
+
+    - platform: time
+      id: oli_bedroom_evening
+      at:
         - "20:30:00"
 
   action:
@@ -17,8 +22,8 @@
     #-------------------------------------------
     - choose:
         - conditions:
-            - condition: template
-              value_template: "{{ now().hour == 6 }}"
+            - condition: trigger
+              id: 'oli_bedroom_morning'
           sequence:
             # IF Morning: Fan Plug
             - choose:
@@ -61,21 +66,21 @@
     #-------------------------------------------
     - choose:
         - conditions:
-            - condition: template
-              value_template: "{{ now().hour == 20 }}"
+            - condition: trigger
+              id: 'oli_bedroom_evening'
           sequence:
             # IF Evening: Fan Plug
             - choose:
                 - conditions:
+                    - condition: state
+                      entity_id: input_boolean.oli_bedroom_fan_en
+                      state: 'on'
                     - condition: state
                       entity_id: switch.plug_1
                       state: 'off'
                     - condition: numeric_state
                       entity_id: sensor.olivia_room_temperature
                       above: 75.0
-                    - condition: state
-                      entity_id: input_boolean.oli_bedroom_fan_en
-                      state: 'on'
                   sequence:
                     - service: switch.turn_on
                       entity_id: switch.plug_1
@@ -84,12 +89,12 @@
             - choose:
                 - conditions:
                     - condition: state
+                      entity_id: input_boolean.oli_bedroom_echo_en
+                      state: 'on'
+                    - condition: state
                       entity_id: media_player.oli_echo
                       attribute: available
                       state: true
-                    - condition: state
-                      entity_id: input_boolean.oli_bedroom_echo_en
-                      state: 'on'
                   sequence:
                     - service: script.alexa_fan_sounds
                       data:
@@ -100,11 +105,11 @@
             - choose:
                 - conditions:
                     - condition: state
-                      entity_id: light.oli_night_light
-                      state: 'off'
-                    - condition: state
                       entity_id: input_boolean.oli_night_light_en
                       state: 'on'
+                    - condition: state
+                      entity_id: light.oli_night_light
+                      state: 'off'
                   sequence:
                     - service: light.turn_on
                       entity_id: light.oli_night_light
