--- a/automations/front_door.yaml
+++ b/automations/front_door.yaml
@@ -44,5 +44,5 @@
               entity_id: light.outside_front_door_light
               state: 'off'
           sequence:
-            - service: light.turn_off
+            - service: light.turn_on
               entity_id: light.outside_front_door_light
