--- a/include/shell_command.yaml
+++ b/include/shell_command.yaml
@@ -7,3 +7,5 @@ shell_command:
   ####################################################
 
   ha_purge_logs: truncate -s 0 /config/home-assistant.log
+  unifi_poweroff: !secret unifi_poweroff
+  unifi_reboot: !secret unifi_reboot
